--- a/src/pages/form/DynamicFormPage.css
+++ b/src/pages/form/DynamicFormPage.css
@@ -1,6 +1,7 @@
 .dynamic-form {
     margin: 50px auto;
-    max-width: 400px;
+    /* max-width: 1020px; */
+    max-width: 1500px;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
@@ -18,10 +19,11 @@
   }
   
   .dynamic-form input[type="text"] {
-    padding: 10px;
+    padding: 20px;
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    width: 95%
   }
   
   .dynamic-form input[type="text"]:read-only {
